1.修改了主界面 2.新增备忘录界面 3.完成备忘录功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,10 +29,11 @@
         android:layout_height="62dp"
         android:backgroundTint="#752196F3"
         android:fontFamily="monospace"
-        android:text="@string/todo_list"
+        android:text="@string/memo"
         android:textSize="24sp"
         android:textStyle="bold"
         android:typeface="normal"
+        android:onClick="open"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.166"
