1.修改了主界面，新增实时时间的显示 2.修改了备忘录功能 3.完成闹钟界面的设计以及闹钟功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,11 +29,11 @@
         android:layout_height="62dp"
         android:backgroundTint="#752196F3"
         android:fontFamily="monospace"
+        android:onClick="openMemo"
         android:text="@string/memo"
         android:textSize="24sp"
         android:textStyle="bold"
         android:typeface="normal"
-        android:onClick="open"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.166"
@@ -68,6 +68,7 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:typeface="normal"
+        android:onClick="openAlarmClock"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.166"
@@ -189,14 +190,27 @@
         android:id="@+id/chronometer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:format="00:00:00"
         android:textColor="#FBFAFA"
         android:textSize="96sp"
         android:textStyle="bold"
-        android:format="00:00:00"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.22" />
+
+    <TextClock
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:format24Hour="h:mmaa"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.902"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.014" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
