--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,6 +87,7 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:typeface="normal"
+        android:onClick="openWebsite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.81"
