1.修改主界面 2.新增界面：网页快捷入口

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,16 +78,16 @@
         app:layout_constraintVertical_bias="0.514" />
 
     <Button
-        android:id="@+id/baidu"
+        android:id="@+id/website"
         android:layout_width="237dp"
         android:layout_height="62dp"
         android:backgroundTint="#FDF4568C"
         android:fontFamily="monospace"
-        android:text="@string/baidu"
+        android:onClick="openWebsite"
+        android:text="@string/website"
         android:textSize="24sp"
         android:textStyle="bold"
         android:typeface="normal"
-        android:onClick="openWebsite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.81"
@@ -131,18 +131,6 @@
         app:layout_constraintVertical_bias="0.84"
         app:srcCompat="@drawable/alarm_clock" />
 
-    <ImageView
-        android:id="@+id/bd_icon"
-        android:layout_width="69dp"
-        android:layout_height="64dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.084"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.962"
-        app:srcCompat="@drawable/baidu" />
-
     <Button
         android:id="@+id/pause"
         android:layout_width="wrap_content"
@@ -156,7 +144,7 @@
         app:layout_constraintHorizontal_bias="0.096"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.434" />
+        app:layout_constraintVertical_bias="0.418" />
 
     <Button
         android:id="@+id/start"
@@ -168,10 +156,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.062"
+        app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toEndOf="@+id/pause"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.434" />
+        app:layout_constraintVertical_bias="0.418" />
 
     <Button
         android:id="@+id/reset"
@@ -183,10 +171,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintHorizontal_bias="0.175"
         app:layout_constraintStart_toEndOf="@+id/start"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.434" />
+        app:layout_constraintVertical_bias="0.418" />
 
     <Chronometer
         android:id="@+id/chronometer"
@@ -201,18 +189,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.22" />
-
-    <TextClock
-        android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:format24Hour="h:mmaa"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.902"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.014" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
