--- a/app/src/main/res/layout/activity_alarm_clock.xml
+++ b/app/src/main/res/layout/activity_alarm_clock.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B9EF8DAE"
+    android:background="#72E91E63"
     tools:context=".AlarmClockActivity">
 
     <Button
         android:id="@+id/setClock"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="#03A9F4"
+        android:backgroundTint="#02A6F1"
         android:text="@string/set_clock"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -55,7 +55,7 @@
         android:id="@+id/alarm_clock_show"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="no alarm clock"
+        android:text="@string/alarm_clock_content"
         android:textColor="#5E5757"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
