--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FBFDFD"
+    android:background="@color/white"
     android:foregroundTint="#333640"
     tools:context=".CalculatorActivity">
 
@@ -323,7 +323,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#2195F2"
         android:onClick="back2"
-        android:text="Back"
+        android:text="@string/calculator_back"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
