--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FEFEFE"
     tools:context=".WebActivity">
 
     <Button
@@ -115,7 +116,7 @@
         app:srcCompat="@drawable/cnki" />
 
     <Button
-        android:id="@+id/btn_new1"
+        android:id="@+id/btn_new"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#2196F3"
@@ -142,7 +143,7 @@
         app:srcCompat="@android:drawable/btn_star_big_on" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btn_set_web"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#FEC500"
@@ -157,7 +158,7 @@
         app:layout_constraintVertical_bias="0.771" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/btn_web_back"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#2196F3"
