完成快速浏览功能：可以直接点击按钮跳转到相应的网址，默认有百度、必应、csdn、有道词典几个网站，还可以新增一个自定义网址，并为其添加名称。

--- a/app/src/main/res/layout/activity_set_website.xml
+++ b/app/src/main/res/layout/activity_set_website.xml
@@ -40,7 +40,7 @@
         android:text="Finish"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:onClick="finish"
+        android:onClick="finishSet"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
